# rust-footy-cli

./: .gitignore  Cargo.toml  README.md
src/: cli.yml  configure.rs  main.rs  requests.rs  utils.rs
src/structs/: mod.rs
src/utils/: mod.rs
