[package]

name = "footy"
version = "0.1.2"
description = "A CLI for getting football data"
authors = ["Michael Reynolds"]
readme = "README.md"
repository = "https://github.com/michael-ar/rust-footy-cli"
keywords = [ "football", "the", "beautiful", "game", "fogonthetyne" ]
categories = [ "command-line-utilities" ]
license = "MIT"

[dependencies]

chrono = "0.4"
clap = { version = "2.29", features = ["yaml"] }
dialoguer = "0.1.0"
prettytable-rs = "0.6"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"